# sse-rust

./: .gitignore  .roborev.toml  .workmux.yaml  AGENTS.md  Cargo.toml  Dockerfile.sandbox  README.md  TERMINOLOGY.md  justfile  manifest  workmux-research-program-opt.prompt.md
.github/workflows/: ci.yml
benches/: search.rs
docs/: 2x2-positive-classifier.md  README.md  TODO.md  aligned-shift-equivalence.md  autoresearch-round-scorecards.md  brix-ruiz-sidecar-log.md  graph-proposal-shortlist-rounds.md  research-harness-benchmark-policy.md  research-ideas.md  rfc-main-search-shortcut-integration.md  rfc-shortcut-search-stage.md  search-parallelism-5b8.md  search-parallelism-8h4.md  search-parallelism-ejw.md
docs/rfcs/: rfc-001-main-search-shortcut-integration.md  rfc-002-shortcut-search-stage.md  rfc-003-structured-witness-vocabulary.md
prompts/: last-24h-repo-summary.md  main-agent-workmux-coordinator.md
references/bilich-dor-on-ruiz-2024-2411.05598/: source.tex
references/boyle-kim-roush-2013-1209.5096/: source.tex
references/boyle-schmieding-2023-2006.01051/: BoyleSchmiedingStableAlgebraV3Arxiv.bbl  BoyleSchmiedingStableAlgebraV3Arxiv.ind  BoyleSchmiedingStableAlgebraV3Arxiv.tex
references/brix-2022-1912.05212/: source.tex
references/choe-shin-1997-s0025579300012614/: 00README.json  paper.html
references/eilers-ruiz-2019-1908.03714/: 00README.json  xyz-paper-3-ix.tex
references/matsumoto-2007-0707.2114/: source.tex
references/matsumoto-2015-1501.06965/: source.tex
references/matsumoto-matui-2013-1307.1299/: source.tex
research/: README.md  brix_ruiz_k4_graph_only_campaign_corpus_2026-04-17.json  brix_ruiz_k4_graph_plus_structured_broad_beam_corpus_2026-04-17.json  brix_ruiz_k4_graph_plus_structured_campaign_corpus_2026-04-17.json  cases.json  k3-graph-paths.sqlite  known_pair_policy_coverage_corpus_2026-04-17.json  layer_contrast_signal_corpus_lind_marcus_2026-04-16.json  layer_contrast_signal_corpus_non_brix_mixed_heldout_2026-04-17.json  log.md  observer_layer_event_probe_2026-04-16.json  program.md  ranking_signal_family_benchmark_v1.json  results.tsv  riedel_gap_benchmark_k16_frontier_2026-04-18.json  riedel_gap_benchmark_lane_2026-04-18.json  riedel_graph_only_vs_mixed_initial_corpus_2026-04-17.json  riedel_graph_only_vs_mixed_widened_corpus_2026-04-17.json  riedel_k4_anchor_step0_graph_decomposition_2026-04-18.json  riedel_k4_anchor_step2_graph_decomposition_2026-04-18.json  riedel_k4_anchor_step3_graph_decomposition_2026-04-18.json  riedel_k4_anchor_step4_graph_decomposition_2026-04-18.json  riedel_k4_graph_only_full_decomposition_2026-04-18.json  riedel_k4_graph_only_full_decomposition_guide_2026-04-18.json  riedel_k4_retained_interior_bridge_entry5_threshold_guide_2026-04-18.json  riedel_k4_retained_step_decomposition_2026-04-18.json  riedel_policy_reach_extension_corpus_2026-04-17.json  riedel_policy_reach_k16_repeat_corpus_2026-04-17.json  riedel_witness_step_classification_k4_k6_2026-04-18.json  witness_corpus_manifest.json
research/fixtures/: brix_ruiz_family.json  generic_guides.json
research/guide_artifacts/: generic_guided_permutation_3x3.json  generic_shortcut_permutation_3x3_pool.json  k3_normalized_guide_pool.json  k3_quotient_retained_guide_pool.json  k3_shortcut_round1.json
research/notes/: 2026-04-12-baker-k3-factor-shape.md  2026-04-12-documentation-audit.md  2026-04-13-beam-k3-executor-retune.md  2026-04-13-beam-k3-validation.md  2026-04-13-esse-distance-heuristics.md  2026-04-13-k3-default-beam-score-validation.md  2026-04-13-k3-signal-corpus.md  2026-04-13-solver-literature-ideas.md  2026-04-14-beam-bfs-handoff-graph-only-k3.md  2026-04-14-k3-attempt176-boundary-retest-after-loop34.md  2026-04-14-k3-dedup-signature-move.md  2026-04-14-k3-k4-cofactor-reuse-4x4-solver.md  2026-04-14-k3-normalized-guide-pool-shortcutting.md  2026-04-14-k3-overdet-fastpath-reverted.md  2026-04-14-k3-shortcut-admission-lagband-reverted.md  2026-04-14-k3-shortcut-beam-timeout1-ab.md  2026-04-14-k3-shortcut-cache-budget-ramp.md  2026-04-14-k3-shortcut-cache-followups-reverted.md  2026-04-14-k3-shortcut-diversity-feed-stage2-ab.md  (+126 more)
scripts/: measure-search-runtime-rss.sh  nudge-workmux-agent.sh  record-search-cpu.sh
src/: aligned.rs  balanced.rs  balanced_search.rs  concrete_shift.rs  conjugacy.rs  factorisation.rs  graph_moves.rs  guide_artifacts.rs  invariants.rs  lib.rs  matrix.rs  path_quotient.rs  path_scoring.rs  quadratic.rs  search.rs  search_observer.rs  sqlite_graph.rs  structured_surface.rs  types.rs  wasm.rs
(+6 files in other folders)
