[package]
name = "sse-core"
version = "0.1.0"
edition = "2021"
autobins = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
dhat-profile = ["dep:dhat"]
pprof-profile = ["dep:pprof"]
research-tools = []
wasm-bindings = ["dep:wasm-bindgen"]

[dependencies]
ahash = "0.8"
pprof = { version = "0.14", features = ["flamegraph", "criterion"], optional = true }
dhat = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "search"
harness = false

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.release]
opt-level = "s"
lto = "thin"

[profile.dist]
inherits = "release"
lto = true

[[bin]]
name = "check_lind_marcus_path"
path = "src/bin/check_lind_marcus_path.rs"
required-features = ["research-tools"]

[[bin]]
name = "compare_brix_ruiz_graph_paths"
path = "src/bin/compare_brix_ruiz_graph_paths.rs"
required-features = ["research-tools"]

[[bin]]
name = "compare_graph_move_proposals"
path = "src/bin/compare_graph_move_proposals.rs"
required-features = ["research-tools"]

[[bin]]
name = "export_k3_paths_neo4j"
path = "src/bin/export_k3_paths_neo4j.rs"
required-features = ["research-tools"]

[[bin]]
name = "find_balanced"
path = "src/bin/find_balanced.rs"
required-features = ["research-tools"]

[[bin]]
name = "find_k3_graph_move_compressions"
path = "src/bin/find_k3_graph_move_compressions.rs"
required-features = ["research-tools"]

[[bin]]
name = "find_lind_marcus_graph_waypoints"
path = "src/bin/find_lind_marcus_graph_waypoints.rs"
required-features = ["research-tools"]

[[bin]]
name = "find_mixed_split_refinement"
path = "src/bin/find_mixed_split_refinement.rs"
required-features = ["research-tools"]

[[bin]]
name = "find_outsplit_3x3_zigzag"
path = "src/bin/find_outsplit_3x3_zigzag.rs"
required-features = ["research-tools"]

[[bin]]
name = "find_outsplit_bridge"
path = "src/bin/find_outsplit_bridge.rs"
required-features = ["research-tools"]

[[bin]]
name = "find_outsplit_bridge_zigzag"
path = "src/bin/find_outsplit_bridge_zigzag.rs"
required-features = ["research-tools"]

[[bin]]
name = "find_outsplit_refinement"
path = "src/bin/find_outsplit_refinement.rs"
required-features = ["research-tools"]

[[bin]]
name = "find_positive_conjugacy"
path = "src/bin/find_positive_conjugacy.rs"
required-features = ["research-tools"]

[[bin]]
name = "evaluate_positive_conjugacy_proposals"
path = "src/bin/evaluate_positive_conjugacy_proposals.rs"
required-features = ["research-tools"]

[[bin]]
name = "evaluate_positive_conjugacy_usefulness"
path = "src/bin/evaluate_positive_conjugacy_usefulness.rs"
required-features = ["research-tools"]

[[bin]]
name = "find_rectangular_case"
path = "src/bin/find_rectangular_case.rs"
required-features = ["research-tools"]

[[bin]]
name = "find_two_step_mixed_split_refinement"
path = "src/bin/find_two_step_mixed_split_refinement.rs"
required-features = ["research-tools"]

[[bin]]
name = "find_two_step_outsplit_refinement"
path = "src/bin/find_two_step_outsplit_refinement.rs"
required-features = ["research-tools"]

[[bin]]
name = "profile_graph_moves"
path = "src/bin/profile_graph_moves.rs"
required-features = ["research-tools"]

[[bin]]
name = "profile_square_factorisation_sources"
path = "src/bin/profile_square_factorisation_sources.rs"
required-features = ["research-tools"]

[[bin]]
name = "profile_sq3_breakdown"
path = "src/bin/profile_sq3_breakdown.rs"
required-features = ["research-tools"]

[[bin]]
name = "analyze_path_signal_corpus"
path = "src/bin/analyze_path_signal_corpus.rs"
required-features = ["research-tools"]

[[bin]]
name = "assemble_k3_guide_pool"
path = "src/bin/assemble_k3_guide_pool.rs"
required-features = ["research-tools"]

[[bin]]
name = "replay_graph_path_scores"
path = "src/bin/replay_graph_path_scores.rs"
required-features = ["research-tools"]

[[bin]]
name = "research_harness"
path = "src/bin/research_harness.rs"
required-features = ["research-tools"]

[[bin]]
name = "search"
path = "src/bin/search.rs"

[[bin]]
name = "verify_lind_marcus_reconstruction"
path = "src/bin/verify_lind_marcus_reconstruction.rs"
required-features = ["research-tools"]
